# node-segfault-handler-rs

./: .eslintignore  Cargo.toml  History.md  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  register.js  tsconfig.json
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: binding.cc  binding.rs  lib.rs  segfault_handler.rs
test/: index.test.ts
test/fixtures/: test.js
